# ics3u-classwork-wesoree

./: 9671111.py  README.md  allthingsrandom.py  amongus.py  ball.py  cpt.py  game.py  herons_formula.py  herons_formula_no_function.py  if-else-elif.py  kingofstrings.py  kite.py  landscape.py  lesson6.3.py  main.py  mingler.py  no_negative_args.py  numbers_and_math.py  paddle.py  pygame_template.py  pyproject.toml  sandbox.py  webdriver_torso.py
demos/: 9671111.py  allthingsrandom.py  if-else-elif.py  loops.py  modulus.py  numbers_and_math.py  pygame_template.py  test.py
mc/: tic_tac_toe.py
misc/: pinewood.py
my-package/: pyproject.toml
projects/: game-menu.py  masterproject.py  webdriver_torso.py
