[tool.poetry]
name = "ics3u-classwork-wesoree"
version = "0.1.0"
description = ""
authors = ["wesoree <wesleylo174@gmail.com>"]
readme = "README.md"
packages = [{include = "ics3u_classwork_wesoree"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
