[tool.poetry]
name = "my-package"
version = "0.1.0"
description = ""
authors = ["wesoree <75049633+wesoree@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "my_package"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
